# worknow

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
mac/: build.sh  install-launchd-macos  main.swift  uninstall-launchd-macos
src/worknow/: cli.py  sessions.py
tests/: test_cli.py
