[metadata]
name = worknow
version = 0.1.0
description = Automatically track active coding work across local agent windows and git projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Qun

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    worknow = worknow.cli:main
